--- a/translation/sumwars_events_de.po
+++ b/translation/sumwars_events_de.po
@@ -1,18 +1,18 @@
 # German translations for sumwars package.
 # Copyright (C) 2009 THE sumwars'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the sumwars package.
-# Hans Wulf <hans@kalypso>, 2009.
+# Michael <michael@localhost.localdomain>, 2009.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: sumwars 0.01\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-03-05 22:47+0100\n"
-"PO-Revision-Date: 2009-03-05 22:06+0100\n"
-"Last-Translator: Hans Wulf <hans@kalypso>\n"
-"Language-Team: German\n"
+"POT-Creation-Date: 2009-03-10 17:22+0100\n"
+"PO-Revision-Date: 2009-03-10 17:28+0100\n"
+"Last-Translator: Michael <michael@localhost.localdomain>\n"
+"Language-Team: German <translation-team-de@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=ASCII\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
