Icewand rasugeworfen; NPC's entgueltig aus monster.xml geloescht; mauer-template hinzugefuegt; kleinen Uebersetzungsfehler gefixt

--- a/translation/sumwars_xml_de.po
+++ b/translation/sumwars_xml_de.po
@@ -882,7 +882,7 @@ msgstr "Vagabundenhut"
 
 #: hat.xml
 msgid "apprentice cap"
-msgstr ""
+msgstr "Lehrlingskappe"
 
 #: hat.xml
 msgid "novice hat"
@@ -942,7 +942,7 @@ msgstr "Flickenrobe"
 
 #: robes.xml
 msgid "apprentice robe"
-msgstr "Lehrlingskappe"
+msgstr "Lehrlingsrobe"
 
 #: robes.xml
 msgid "novice robe"
