--- a/translation/en/sumwars-xml.po
+++ b/translation/en/sumwars-xml.po
@@ -14,7 +14,7 @@ msgstr ""
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
+"Content-Transfer-Encoding: UTF-8\n"
 
 #: shortbow.xml
 msgid "practice bow"
@@ -1250,10 +1250,6 @@ msgstr ""
 
 #: besieged_farm.xml
 msgid "Brons Farm"
-msgstr ""
-
-#: scene6.xml
-msgid "Hauptquest: melde dich bei General G"
 msgstr ""
 
 #: maylons_grave.xml
