--- a/translation/de/sumwars-sumwars.po
+++ b/translation/de/sumwars-sumwars.po
@@ -3,16 +3,17 @@
 # This file is distributed under the same license as the sumwars package.
 # Michael <michael@localhost.localdomain>, 2009.
 #
+# kalimgard <kalimgard@users.sourceforge.net>, 2010.
 msgid ""
 msgstr ""
-"Project-Id-Version: sumwars 0.01\n"
+"Project-Id-Version: sumwars 0.5\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-05-04 17:08+0200\n"
-"PO-Revision-Date: 2009-03-09 15:17+0100\n"
-"Last-Translator: Michael <michael@localhost.localdomain>\n"
-"Language-Team: German <translation-team-de@lists.sourceforge.net>\n"
+"PO-Revision-Date: 2010-05-10 \n"
+"Last-Translator: kalimgard <kalimgard@users.sourceforge.net>\n"
+"Language-Team: german <de@sumwars>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
@@ -186,7 +187,7 @@ msgstr "Willenskraft"
 
 #: ../src/core/item.cpp:814
 msgid " max. "
-msgstr ""
+msgstr "max. "
 
 #: ../src/gui/charcreate.cpp:120 ../src/gui/charinfo.cpp:849
 #: ../src/gui/partyinfo.cpp:450 ../src/gui/savegamelist.cpp:177
@@ -332,7 +333,7 @@ msgstr "Gold"
 
 #: ../src/gui/inventory.cpp:391
 msgid "Drop:"
-msgstr ""
+msgstr "Drop:"
 
 #: ../src/gui/mainmenu.cpp:76
 msgid "Single player"
@@ -382,11 +383,11 @@ msgstr "Host"
 
 #: ../src/gui/optionswindow.cpp:197
 msgid "Shortkeys"
-msgstr ""
+msgstr "Shortkeys"
 
 #: ../src/gui/optionswindow.cpp:199
 msgid "Audio"
-msgstr ""
+msgstr "Audio"
 
 #: ../src/gui/optionswindow.cpp:201
 msgid "Graphic"
@@ -394,7 +395,7 @@ msgstr "Grafik"
 
 #: ../src/gui/optionswindow.cpp:203
 msgid "Misc"
-msgstr ""
+msgstr "Misc"
 
 #: ../src/gui/optionswindow.cpp:209
 msgid "Character screen"
@@ -418,11 +419,11 @@ msgstr "Ausrüstung wechseln"
 
 #: ../src/gui/optionswindow.cpp:230
 msgid "Item Labels"
-msgstr ""
+msgstr "Gegenstands Beschreibungen"
 
 #: ../src/gui/optionswindow.cpp:233
 msgid "Sound"
-msgstr ""
+msgstr "Sound"
 
 #: ../src/gui/optionswindow.cpp:236
 msgid "Music"
