--- a/translation/de/sumwars-xml.po
+++ b/translation/de/sumwars-xml.po
@@ -3,22 +3,23 @@
 # This file is distributed under the same license as the sumwars package
 # Michael <michael@localhost.localdomain>, 2009
 #
+# kalimgard <kalimgard@users.sourceforge.net>, 2010.
 msgid ""
 msgstr ""
-"Project-Id-Version: sumwars 0.01\n"
+"Project-Id-Version: sumwars 0.5\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-03-09 15:15+0100\n"
-"PO-Revision-Date: 2009-04-01 14:57+0200\n"
-"Last-Translator: Michael <michael@localhost.localdomain>\n"
-"Language-Team: German <translation-team-de@lists.sourceforge.net>\n"
+"PO-Revision-Date: 2010-05-10 \n"
+"Last-Translator: kalimgard <kalimgard@users.sourceforge.net>\n"
+"Language-Team: german <translation-team-de@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: shortbow.xml
 msgid "practice bow"
-msgstr "übungsbogen"
+msgstr "Übungsbogen"
 
 #: shortbow.xml
 msgid "yew shortbow"
@@ -90,11 +91,11 @@ msgstr "Feenbogen"
 
 #: polearms.xml
 msgid "pike"
-msgstr ""
+msgstr "Pike"
 
 #: potion.xml
 msgid "scroll of town portal"
-msgstr ""
+msgstr "Stadtportal"
 
 #: potion.xml
 msgid "small potion"
@@ -170,7 +171,7 @@ msgstr "Barbarenstreitaxt"
 
 #: axes2h.xml
 msgid "bonebreaker axe"
-msgstr "Kncohenbrecheraxt"
+msgstr "Knochenbrecheraxt"
 
 #: axes2h.xml
 msgid "giant axe"
@@ -318,7 +319,7 @@ msgstr "Birett"
 
 #: helmet.xml
 msgid "chain turban"
-msgstr ""
+msgstr "Kettenturban"
 
 #: hammer1h.xml
 msgid "hammer"
@@ -430,7 +431,7 @@ msgstr "Novizenzauberstab"
 
 #: wands.xml
 msgid "hermit wand"
-msgstr ""
+msgstr "Einsiedlerzauberstab"
 
 #: wands.xml
 msgid "rock wand"
@@ -442,7 +443,7 @@ msgstr "Erlenzauberstab"
 
 #: wands.xml
 msgid "bard's wand"
-msgstr ""
+msgstr "Bardenzauberstab"
 
 #: wands.xml
 msgid "magus wand"
@@ -598,7 +599,7 @@ msgstr "Küstenschwert"
 
 #: swords1h.xml
 msgid "council sabre"
-msgstr ""
+msgstr "Konzilssäbel"
 
 #: swords1h.xml
 msgid "scimitar"
@@ -658,7 +659,7 @@ msgstr "Novizenstab"
 
 #: staff.xml
 msgid "hermit staff"
-msgstr ""
+msgstr "Einsiedlerstab"
 
 #: staff.xml
 msgid "rock staff"
@@ -670,7 +671,7 @@ msgstr "Erlenstab"
 
 #: staff.xml
 msgid "bard's staff"
-msgstr ""
+msgstr "Bardenstab"
 
 #: staff.xml
 msgid "magus staff"
@@ -682,7 +683,7 @@ msgstr "Silberstab"
 
 #: staff.xml
 msgid "inferno staff"
-msgstr ""
+msgstr "Infernostab"
 
 #: staff.xml
 msgid "oak staff"
@@ -726,15 +727,15 @@ msgstr "Feenstab"
 
 #: staff.xml
 msgid "ifreet staff"
-msgstr ""
+msgstr "Efreetstab"
 
 #: staff.xml
 msgid "icewitch staff"
-msgstr ""
+msgstr "Eishexenstab"
 
 #: staff.xml
 msgid "sylph staff"
-msgstr ""
+msgstr "Sylphenstab"
 
 #: staff.xml
 msgid "archmage staff"
@@ -834,7 +835,7 @@ msgstr "Engelsschwert"
 
 #: undeadEqu.xml
 msgid "broken shield"
-msgstr ""
+msgstr "Zerbrochener Schild"
 
 #: undeadEqu.xml
 msgid "old sword"
@@ -934,7 +935,7 @@ msgstr "Magierhut"
 
 #: hat.xml
 msgid "turban"
-msgstr ""
+msgstr "Turban"
 
 #: armor.xml
 msgid "cloth armor"
@@ -974,7 +975,7 @@ msgstr "Tempelrüstung"
 
 #: armor.xml
 msgid "council armor"
-msgstr ""
+msgstr "Konzilsrüstung"
 
 #: robes.xml
 msgid "ragged robe"
@@ -1002,7 +1003,7 @@ msgstr "Magierrobe"
 
 #: robes.xml
 msgid "council robe"
-msgstr ""
+msgstr "Konzilsrobe"
 
 #: glove.xml
 msgid "leather gloves"
@@ -1034,19 +1035,19 @@ msgstr "Assassinenhandschuhe"
 
 #: glove.xml
 msgid "shark gloves"
-msgstr ""
+msgstr "Haifischhandshuhe"
 
 #: goblinEqu.xml
 msgid "goblin armor"
-msgstr ""
+msgstr "Goblinbeinschiene"
 
 #: goblinEqu.xml
 msgid "goblin bracer"
-msgstr ""
+msgstr "Goblinarmschiene"
 
 #: goblinEqu.xml
 msgid "shaman mask"
-msgstr ""
+msgstr "Schamanenmaske"
 
 #: goblinEqu.xml
 msgid "goblin club"
@@ -1058,7 +1059,7 @@ msgstr "Rostiger Dolch"
 
 #: goblinEqu.xml
 msgid "shaman staff"
-msgstr ""
+msgstr "Schamanenstab"
 
 #: goblinEqu.xml
 msgid "nail club"
@@ -1070,7 +1071,7 @@ msgstr "Goblinbogen"
 
 #: goblinEqu.xml
 msgid "goblin spear"
-msgstr ""
+msgstr "Goblinspeer"
 
 #: amulet.xml
 msgid "feather amulet"
@@ -1094,11 +1095,11 @@ msgstr "Goldamulett"
 
 #: theTrader.xml
 msgid "The Trader"
-msgstr ""
+msgstr "Der Händler"
 
 #: theTrader.xml
 msgid "elCnlLobby"
-msgstr "Lobby des Konzils"
+msgstr "Konzil der Elemente, Untergrundverließ"
 
 #: theTrader.xml
 msgid "medMercCamp"
@@ -1110,23 +1111,23 @@ msgstr "Joringsbrück"
 
 #: theTrader.xml
 msgid "What are you doing here?"
-msgstr ""
+msgstr "Was tut ihr hier?"
 
 #: theTrader.xml
 msgid "greyCurseCaveFis"
-msgstr ""
+msgstr "Der Spalt"
 
 #: theTrader.xml
 msgid "dwarfenwall"
-msgstr ""
+msgstr "Zwergentrutz"
 
 #: theTrader.xml
 msgid "I see you have reached dwarfenwall safely."
-msgstr ""
+msgstr "Ich sehe dass ihr Zwergentrutz sicher erreicht habt."
 
 #: goblins.xml
 msgid "Der Goblinvernichter"
-msgstr ""
+msgstr "Der Goblinvernichter"
 
 #: goblins.xml
 msgid "peasant"
@@ -1134,59 +1135,59 @@ msgstr "Bauer"
 
 #: goblins.xml
 msgid "Goblins"
-msgstr ""
+msgstr "Goblins"
 
 #: goblins.xml
 msgid "Goblins (Belohnung)"
-msgstr ""
+msgstr "Goblins (Belohnung)"
 
 #: goblins.xml
 msgid "region1"
-msgstr ""
+msgstr "region1"
 
 #: tutorial.xml
 msgid "Tutorial"
-msgstr ""
+msgstr "Tutorial"
 
 #: tutorial.xml
 msgid "Derred"
-msgstr ""
+msgstr "Derred"
 
 #: tutorial.xml
 msgid "Waffen abgeben"
-msgstr ""
+msgstr "Waffen abgeben"
 
 #: tutorial.xml
 msgid "Tolec"
-msgstr ""
+msgstr "Tolec"
 
 #: tutorial.xml
 msgid "Inventar erklären"
-msgstr ""
+msgstr "Inventar erklären"
 
 #: tutorial.xml
 msgid "Schnecken angreifen"
-msgstr ""
+msgstr "Schnecken angreifen"
 
 #: tutorial.xml
 msgid "Levelup erklären"
-msgstr ""
+msgstr "Levelup erklären"
 
 #: tutorial.xml
 msgid "Futterklappe öffnen"
-msgstr ""
+msgstr "Futterklappe öffnen"
 
 #: tutorial.xml
 msgid "Fähigkeiten erklären"
-msgstr ""
+msgstr "Fähigkeiten erklären"
 
 #: tutorial.xml
 msgid "Geheimtuer oeffnen"
-msgstr ""
+msgstr "Geheimtuer oeffnen"
 
 #: scene7.xml
 msgid "Das Teichmonster"
-msgstr ""
+msgstr "Das Teichmonster"
 
 #: scene7.xml
 msgid "Soren Windclaw"
@@ -1194,31 +1195,31 @@ msgstr "Soren Windklaue"
 
 #: scene7.xml
 msgid "greyCurseLake"
-msgstr ""
+msgstr "Versteckter See"
 
 #: theFissure.xml
 msgid "Der Hinterhalt der Untoten"
-msgstr ""
+msgstr "Der Hinterhalt der Untoten"
 
 #: theFissure.xml
 msgid "aisMounPath"
-msgstr ""
+msgstr "Gebirgspfad"
 
 #: theFissure.xml
 msgid "greyCurseCaveDep"
-msgstr ""
+msgstr "Verfluchte Höhlen, Tiefe"
 
 #: siegeOfDwarfenwall.xml
 msgid "Defend dwarfenwall"
-msgstr ""
+msgstr "Verteidigt Zwergentrutz"
 
 #: siegeOfDwarfenwall.xml
 msgid "dwarfenwallCommand"
-msgstr ""
+msgstr "Kommandozentrum"
 
 #: siegeOfDwarfenwall.xml
 msgid "dwarfenwallRampart"
-msgstr ""
+msgstr "Burgwall"
 
 #: siegeOfDwarfenwall.xml
 msgid "necFieldcamp"
@@ -1226,7 +1227,7 @@ msgstr "Feldlager der Untoten"
 
 #: theAmbush.xml
 msgid "The Ambush"
-msgstr ""
+msgstr "Der Hinterhalt"
 
 #: theAmbush.xml
 msgid "aisWolfstones"
@@ -1242,19 +1243,19 @@ msgstr "Sergeant Lutterer"
 
 #: besieged_farm.xml
 msgid "Der Bauernhof"
-msgstr ""
+msgstr "Der Bauernhof"
 
 #: besieged_farm.xml
 msgid "aisNorthMeadow"
-msgstr "Nürdliche Wiese"
+msgstr "Nördliche Wiese"
 
 #: besieged_farm.xml
 msgid "Brons Farm"
-msgstr ""
+msgstr "Brons Farm"
 
 #: scene6.xml
 msgid "Hauptquest: melde dich bei General G"
-msgstr ""
+msgstr "Melde dich bei General Greif"
 
 #: maylons_grave.xml
 msgid "Maylons Grab"
@@ -1262,15 +1263,15 @@ msgstr "Maylons Grab"
 
 #: maylons_grave.xml
 msgid "aisMaylonsGraveEntry"
-msgstr ""
+msgstr "Maylons Grab"
 
 #: maylons_grave.xml
 msgid "Gab Resh"
-msgstr ""
+msgstr "Gab'Resh"
 
 #: maylons_grave.xml
 msgid "aisMaylonsGraveL1"
-msgstr "Maylons Grab"
+msgstr "Maylons Grab, Ebene 1"
 
 #: maylons_grave.xml
 msgid "aisMaylonsGraveL2"
@@ -1286,11 +1287,11 @@ msgstr "Gertlinde Kampfer"
 
 #: herbalist.xml
 msgid "Herb gathering"
-msgstr ""
+msgstr "Kräutersammeln"
 
 #: testquest.xml
 msgid "testquest"
-msgstr ""
+msgstr "Testquest"
 
 #: testquest.xml
 msgid "Fenor Marken"
@@ -1298,7 +1299,7 @@ msgstr "Fenor Marken"
 
 #: testquest.xml
 msgid "Test"
-msgstr ""
+msgstr "Test"
 
 #: joringsbridge.xml
 msgid "Joringsbridge"
@@ -1306,15 +1307,15 @@ msgstr "Joringsbrück"
 
 #: fortify_dwarfenwall.xml
 msgid "Fortify Dwarfenwall"
-msgstr ""
+msgstr "Vesrtärke Zwergentrutz"
 
 #: fortify_dwarfenwall.xml
 msgid "Windklaue sprechen"
-msgstr ""
+msgstr "Windklaue sprechen"
 
 #: fortify_dwarfenwall.xml
 msgid "medBackalley"
-msgstr ""
+msgstr "Hintergassen"
 
 #: rob_the_robber.xml
 msgid "Rob der Raeuber"
@@ -1334,7 +1335,7 @@ msgstr "Rob der Räuber (Belohnung)"
 
 #: rob_the_robber.xml
 msgid "aisDarkFairyforest"
-msgstr ""
+msgstr "Dunkler Feenwald"
 
 #: rescue_willard.xml
 msgid "Ein Freund in Not"
@@ -1354,39 +1355,39 @@ msgstr "Aisener Wiese"
 
 #: joringsbridge_npc.xml
 msgid "Potions"
-msgstr ""
+msgstr "Tränke"
 
 #: joringsbridge_npc.xml
 msgid "Sybill"
-msgstr ""
+msgstr "Sybill"
 
 #: joringsbridge_npc.xml
 msgid "Weapons"
-msgstr ""
+msgstr "Waffen"
 
 #: joringsbridge_npc.xml
 msgid "Halgor"
-msgstr ""
+msgstr "Halgor"
 
 #: joringsbridge_npc.xml
 msgid "Armors"
-msgstr ""
+msgstr "Rüstungen"
 
 #: joringsbridge_npc.xml
 msgid "Marco"
-msgstr ""
+msgstr "Marco"
 
 #: joringsbridge_npc.xml
 msgid "Fundgegenstaende"
-msgstr ""
+msgstr "Fundgegenstaende"
 
 #: joringsbridge_npc.xml
 msgid "What are these Items?"
-msgstr ""
+msgstr "Was sind das für Gegenstände?"
 
 #: joringsbridge_npc.xml
 msgid "The surroundings of Joringsbridge"
-msgstr ""
+msgstr "Die Umgebung von Joringsbrück"
 
 #: joringsbridge_npc.xml
 msgid "Michel Bron"
@@ -1394,52 +1395,52 @@ msgstr "Michel Bron"
 
 #: joringsbridge_npc.xml
 msgid "Magus Convocatis Relau Fireweaver"
-msgstr ""
+msgstr "Magus Convocatis Relau Feuerweber"
 
 #: dwarfcastle.xml
 msgid "Haffgar"
-msgstr ""
+msgstr "Haffgar"
 
 #: dwarfcastle.xml
 msgid "Trade"
-msgstr ""
+msgstr "Trade"
 
 #: dwarfcastle.xml
 msgid "Amelia"
-msgstr ""
+msgstr "Amelia"
 
 #: dwarfcastle.xml
 msgid "Drago"
-msgstr ""
+msgstr "Drago"
 
 #: dwarfcastle.xml
 msgid "Flynn"
-msgstr ""
+msgstr "Flynn"
 
 #: dwarfcastle.xml
 msgid "What is all this?"
-msgstr ""
+msgstr "Was ist das alles?"
 
 #: medairnpc.xml
 msgid "Robert"
-msgstr ""
+msgstr "Robert"
 
 #: medairnpc.xml
 msgid "Elgor"
-msgstr ""
+msgstr "Elgor"
 
 #: medairnpc.xml
 msgid "Cain"
-msgstr ""
+msgstr "Cain"
 
 # Bron's door
 #: npc.xml
 msgid "Brons Tuer"
-msgstr "Tür zu Brons Farm"
+msgstr "Brons Tür"
 
 #: npc.xml
 msgid "Guard"
-msgstr ""
+msgstr "Wache"
 
 #: npc.xml
 msgid "Maylons Ghost"
@@ -1447,71 +1448,71 @@ msgstr "Maylons Geist"
 
 #: npc.xml
 msgid "Leonard von Robenforst"
-msgstr ""
+msgstr "Leonard von Robenforst"
 
 #: npc.xml
 msgid "General Greif"
-msgstr ""
+msgstr "General Greif"
 
 #: npc.xml
 msgid "Maga Convocatis Darna Eistaucher"
-msgstr ""
+msgstr "Maga Convocatis Darna Eistaucher"
 
 #: npc.xml
 msgid "Prince Karlen"
-msgstr ""
+msgstr "Prince Karlen"
 
 #: npc.xml
 msgid "Erzmaga Ireana von Nordenburg"
-msgstr ""
+msgstr "Erzmaga Ireana von Nordenburg"
 
 #: npc.xml
 msgid "Hauptmann der Wache"
-msgstr ""
+msgstr "Hauptmann der Wache"
 
 #: npc.xml
 msgid "Elementaristenwaechter"
-msgstr ""
+msgstr "Elementaristenwaechter"
 
 #: npc.xml
 msgid "Vorarbeiter Nekromant"
-msgstr ""
+msgstr "Vorarbeiter Nekromant"
 
 #: npc.xml
 msgid "Nar'Asoroth"
-msgstr ""
+msgstr "Nar'Asoroth"
 
 #: npc.xml
 msgid "Leere Schriftrollen kaufen"
-msgstr ""
+msgstr "Leere Schriftrollen kaufen"
 
 #: npc.xml
 msgid "The Lost Trader"
-msgstr ""
+msgstr "Der verirrte Händler"
 
 #: cursedCaves.xml
 msgid "greyCurseCave"
-msgstr ""
+msgstr "Verfluchte Höhle"
 
 #: cursedCaves.xml
 msgid "greyCurseGrotto"
-msgstr ""
+msgstr "Verfluchte Grotte"
 
 #: cursedCaves.xml
 msgid "greyWolfcave"
-msgstr ""
+msgstr "Wolfshöhle"
 
 #: cursedCaves.xml
 msgid "greyCurseGrotDep"
-msgstr ""
+msgstr "Verfluchte Grotte, Tiefe"
 
 #: cursedCaves.xml
 msgid "greyCursedCavern"
-msgstr ""
+msgstr "Verfluchte Kaverne"
 
 #: cursedCaves.xml
 msgid "greyCurseCaveEast"
-msgstr ""
+msgstr "Verfluchte Osthöhle"
 
 #: aisen.xml
 msgid "aisPlains"
@@ -1523,15 +1524,15 @@ msgstr "Aisener Heide"
 
 #: aisen.xml
 msgid "aisStonePlains"
-msgstr ""
+msgstr "Steinige Ebene"
 
 #: aisen.xml
 msgid "aisDarkClearing"
-msgstr ""
+msgstr "Dunkle Lichtung"
 
 #: aisen.xml
 msgid "aisWideHeath"
-msgstr ""
+msgstr "Weite Heide"
 
 #: aisen.xml
 msgid "aisJoringsforest"
@@ -1543,95 +1544,95 @@ msgstr "Feenwald"
 
 #: aisen.xml
 msgid "aisWestwoods"
-msgstr ""
+msgstr "Westwald"
 
 #: aisen.xml
 msgid "aisMistslope"
-msgstr ""
+msgstr "Nebelhänge"
 
 #: aisen.xml
 msgid "aisEastslope"
-msgstr ""
+msgstr "Osthänge"
 
 #: testregions.xml
 msgid "maptest"
-msgstr ""
+msgstr "maptest"
 
 #: testregions.xml
 msgid "sandbox"
-msgstr ""
+msgstr "sandbox"
 
 #: testregions.xml
 msgid "spawnAbyss"
-msgstr ""
+msgstr "spawnAbyss"
 
 #: testregions.xml
 msgid "region0"
-msgstr ""
+msgstr "region0"
 
 #: testregions.xml
 msgid "testregion"
-msgstr ""
+msgstr "testregion"
 
 #: humans.xml
 msgid "Bandit"
-msgstr ""
+msgstr "Bandit"
 
 #: humans.xml
 msgid "Thug"
-msgstr ""
+msgstr "Schläger"
 
 #: humans.xml
 msgid "Rogue"
-msgstr ""
+msgstr "Schurke"
 
 #: humans.xml
 msgid "Brigand"
-msgstr ""
+msgstr "Brigant"
 
 #: humans.xml
 msgid "Poacher"
-msgstr ""
+msgstr "Wilderer"
 
 #: humans.xml
 msgid "Alwin"
-msgstr ""
+msgstr "Alwin"
 
 #: humans.xml
 msgid "Thief"
-msgstr ""
+msgstr "Dieb"
 
 #: humans.xml
 msgid "Raider"
-msgstr ""
+msgstr "Plünderer"
 
 #: humans.xml
 msgid "Highwayman"
-msgstr ""
+msgstr "Wegelagerer"
 
 #: humans.xml
 msgid "Buck"
-msgstr ""
+msgstr "Buck"
 
 #: humans.xml
 msgid "Deserter"
-msgstr ""
+msgstr "Deserteur"
 
 #: humans.xml
 msgid "Saboteur"
-msgstr ""
+msgstr "Saboteur"
 
 #: humans.xml
 msgid "Todd"
-msgstr ""
+msgstr "Todd"
 
 #: humans.xml
 msgid "Rob the Robber"
-msgstr ""
+msgstr "Rob der Räuber"
 
 #: humans.xml
 msgid "Ronny the Rat"
-msgstr ""
+msgstr "Ronny die Ratte"
 
 #: goblinStats.xml
 msgid "goblin brawler"
@@ -1647,15 +1648,15 @@ msgstr "Goblinräuber"
 
 #: goblinStats.xml
 msgid "Drakrazz"
-msgstr ""
+msgstr "Drakrazz"
 
 #: goblinStats.xml
 msgid "Roruz"
-msgstr ""
+msgstr "Roruz"
 
 #: goblinStats.xml
 msgid "Nubreck"
-msgstr ""
+msgstr "Nubreck"
 
 #: goblinStats.xml
 msgid "goblin dog"
@@ -1663,19 +1664,19 @@ msgstr "Goblinhund"
 
 #: goblinStats.xml
 msgid "boneshaker"
-msgstr ""
+msgstr "Knochenschüttler"
 
 #: goblinStats.xml
 msgid "Gobrusch"
-msgstr ""
+msgstr "Gobrusch"
 
 #: goblinStats.xml
 msgid "Dobrusch"
-msgstr ""
+msgstr "Dobrusch"
 
 #: goblinStats.xml
 msgid "Lurdrak with the Hammer"
-msgstr ""
+msgstr "Lurdrak mit dem Hammer"
 
 #: goblinStats.xml
 msgid "goblin fighter"
@@ -1687,39 +1688,39 @@ msgstr "Goblinwilderer"
 
 #: goblinStats.xml
 msgid "goblin rider"
-msgstr ""
+msgstr "Goblinreiter"
 
 #: goblinStats.xml
 msgid "snowcaller"
-msgstr ""
+msgstr "Schneerufer"
 
 #: goblinStats.xml
 msgid "reg'resh"
-msgstr ""
+msgstr "Reg'Resh"
 
 #: goblinStats.xml
 msgid "goblin temple guard"
-msgstr ""
+msgstr "Goblintempelwache"
 
 #: goblinStats.xml
 msgid "goblin apprentice"
-msgstr ""
+msgstr "Goblinlehrling"
 
 #: goblinStats.xml
 msgid "Marblak"
-msgstr ""
+msgstr "Marblak"
 
 #: goblinStats.xml
 msgid "goblin youngling"
-msgstr ""
+msgstr "Goblinjungling"
 
 #: goblinStats.xml
 msgid "Gab'Resh"
-msgstr ""
+msgstr "Gab'Resh"
 
 #: goblinStats.xml
 msgid "Gab Clan Goblin"
-msgstr ""
+msgstr "Gab Klan Goblin"
 
 #: goblinStats.xml
 msgid "goblin warrior"
@@ -1727,7 +1728,7 @@ msgstr "Goblinkrieger"
 
 #: goblinStats.xml
 msgid "goblin rocklobber"
-msgstr ""
+msgstr "Goblinsteinschleuderer"
 
 #: goblinStats.xml
 msgid "goblin shaman"
@@ -1735,91 +1736,91 @@ msgstr "Goblinschamane"
 
 #: goblinStats.xml
 msgid "goblin slayer"
-msgstr ""
+msgstr "Goblinschlächter"
 
 #: goblinStats.xml
 msgid "goblin assassin"
-msgstr ""
+msgstr "Goblinassassine"
 
 #: aisenMonsterStats.xml
 msgid "Bloodbeak"
-msgstr ""
+msgstr "Blutschnabel"
 
 #: aisenMonsterStats.xml
 msgid "Giant wolf"
-msgstr ""
+msgstr "Riesenwolf"
 
 #: aisenMonsterStats.xml
 msgid "wolf"
-msgstr ""
+msgstr "Wolf"
 
 #: councilNPCStats.xml
 msgid "Worker"
-msgstr ""
+msgstr "Arbeiter"
 
 #: councilNPCStats.xml
 msgid "Council Guard"
-msgstr ""
+msgstr "Konzilswächter"
 
 #: councilNPCStats.xml
 msgid "Council Mage"
-msgstr ""
+msgstr "Konzilsmagier"
 
 #: councilNPCStats.xml
 msgid "Ireana von Nordenburg"
-msgstr ""
+msgstr "Ireana von Nordenburg"
 
 #: councilNPCStats.xml
 msgid "Council Guard Captain"
-msgstr ""
+msgstr "Konzilshauptmann"
 
 #: councilNPCStats.xml
 msgid "Fireguardian"
-msgstr ""
+msgstr "Feuerwächter"
 
 #: council_monsters.xml
 msgid "Fire Slug"
-msgstr ""
+msgstr "Feuerschnecke"
 
 #: council_monsters.xml
 msgid "Mutant Slug"
-msgstr ""
+msgstr "Mutierte Schnecke"
 
 #: council_monsters.xml
 msgid "Fire Louse"
-msgstr ""
+msgstr "Feuerassel"
 
 #: council_monsters.xml
 msgid "Firefletchling"
-msgstr ""
+msgstr "Feuerküken"
 
 #: council_monsters.xml
 msgid "Inferno Behemoth"
-msgstr ""
+msgstr "Inferno Behemoth"
 
 #: aisenNPCStats.xml
 msgid "Healer"
-msgstr ""
+msgstr "Heiler"
 
 #: aisenNPCStats.xml
 msgid "Trader"
-msgstr ""
+msgstr "Händler"
 
 #: aisenNPCStats.xml
 msgid "Bowman"
-msgstr ""
+msgstr "Bogenschütze"
 
 #: aisenNPCStats.xml
 msgid "Avaeras Order, Firemage"
-msgstr ""
+msgstr "Avaeras Orden, Feuermagier"
 
 #: aisenNPCStats.xml
 msgid "Elite Swordsman"
-msgstr ""
+msgstr "Eliteschwertkämpfer"
 
 #: undeadStats.xml
 msgid "Guardian Skeleton"
-msgstr ""
+msgstr "Wächterskelett"
 
 #: undeadStats.xml
 msgid "Zombie"
@@ -1827,7 +1828,7 @@ msgstr "Zombie"
 
 #: undeadStats.xml
 msgid "Maylon"
-msgstr ""
+msgstr "Maylon"
 
 #: undeadStats.xml
 msgid "lich"
@@ -1839,35 +1840,35 @@ msgstr "Skelett"
 
 #: undeadStats.xml
 msgid "Giant Skeleton"
-msgstr ""
+msgstr "Riesenskelett"
 
 #: undeadStats.xml
 msgid "Skeleton Archer"
-msgstr ""
+msgstr "Skelettbogenschütze"
 
 #: undeadStats.xml
 msgid "Skeleton Shadow Archer"
-msgstr ""
+msgstr "Skelettschattenbogenschütze"
 
 #: undeadStats.xml
 msgid "Frostbone"
-msgstr ""
+msgstr "Frostknochen"
 
 #: undeadStats.xml
 msgid "Burning Skeleton"
-msgstr ""
+msgstr "Brennendes Skelett"
 
 #: undeadStats.xml
 msgid "Undead Scythe"
-msgstr ""
+msgstr "Untote Sense"
 
 #: undeadStats.xml
 msgid "Necromancer"
-msgstr ""
+msgstr "Nekromant"
 
 #: undeadStats.xml
 msgid "Worker Skeleton"
-msgstr ""
+msgstr "Skelettarbeiter"
 
 #: undeadStats.xml
 msgid "Lich"
@@ -1875,51 +1876,51 @@ msgstr "Lich"
 
 #: undeadStats.xml
 msgid "Huge Skeleton"
-msgstr ""
+msgstr "Gewaltiges Skelett"
 
 #: undeadStats.xml
 msgid "Frost Skeleton"
-msgstr ""
+msgstr "Frostskelett"
 
 #: undeadStats.xml
 msgid "Frost Skeleton Archer"
-msgstr ""
+msgstr "Frostskelettbogenschütze"
 
 #: undeadStats.xml
 msgid "Chilling Death"
-msgstr ""
+msgstr "Weißer Tod"
 
 #: undeadStats.xml
 msgid "Savage Skeleton"
-msgstr ""
+msgstr "Wildes Skelett"
 
 #: undeadStats.xml
 msgid "Boney Brothers"
-msgstr ""
+msgstr "Knochige Brüder"
 
 #: undeadStats.xml
 msgid "Icemage"
-msgstr ""
+msgstr "Eismagier"
 
 #: undeadStats.xml
 msgid "Frostmage"
-msgstr ""
+msgstr "Frostmagier"
 
 #: undeadStats.xml
 msgid "Neivan the Frostbringer"
-msgstr ""
+msgstr "Neivan der Frostbringer"
 
 #: undeadStats.xml
 msgid "Blackmage"
-msgstr ""
+msgstr "Schwarzmagier"
 
 #: undeadStats.xml
 msgid "Black Raven"
-msgstr ""
+msgstr "Schwarzer Rabe"
 
 #: undeadStats.xml
 msgid "Ice Obelisk"
-msgstr ""
+msgstr "Eisobelisk"
 
 #: monsters.xml
 msgid "small mandragora"
