--- a/translation/en/sumwars-sumwars.po
+++ b/translation/en/sumwars-sumwars.po
@@ -3,455 +3,460 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
+# kalimgard <kalimgard@users.sourceforge.net>, 2010.
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: 0.5\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-05-06 23:35+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2010-05-10 \n"
+"Last-Translator: kalimgard <kalimgard@users.sourceforge.net>\n"
+"Language-Team: english <en@sumwars>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: ../src/core/damage.cpp:142 ../src/gui/charinfo.cpp:916
 msgid "Physical"
-msgstr ""
+msgstr "Physical"
 
 #: ../src/core/damage.cpp:144 ../src/gui/charinfo.cpp:925
 msgid "Fire"
-msgstr ""
+msgstr "Fire"
 
 #: ../src/core/damage.cpp:146 ../src/gui/charinfo.cpp:922
 msgid "Ice"
-msgstr ""
+msgstr "Ice"
 
 #: ../src/core/damage.cpp:148 ../src/gui/charinfo.cpp:919
 msgid "Air"
-msgstr ""
+msgstr "Air"
 
 #: ../src/core/damage.cpp:158
 msgid "Physical resistance"
-msgstr ""
+msgstr "Physical resistance"
 
 #: ../src/core/damage.cpp:160
 msgid "Fire resistance"
-msgstr ""
+msgstr "Fire resistance"
 
 #: ../src/core/damage.cpp:162
 msgid "Ice resistance"
-msgstr ""
+msgstr "Ice resistance"
 
 #: ../src/core/damage.cpp:164
 msgid "Air resistance"
-msgstr ""
+msgstr "Air resistance"
 
 #: ../src/core/damage.cpp:174
 msgid "blind"
-msgstr ""
+msgstr "blind"
 
 #: ../src/core/damage.cpp:176
 msgid "poisoned"
-msgstr ""
+msgstr "poisoned"
 
 #: ../src/core/damage.cpp:178
 msgid "mute"
-msgstr ""
+msgstr "mute"
 
 #: ../src/core/damage.cpp:180
 msgid "confused"
-msgstr ""
+msgstr "confused"
 
 #: ../src/core/damage.cpp:182
 msgid "berserk"
-msgstr ""
+msgstr "berserk"
 
 #: ../src/core/damage.cpp:184
 msgid "paralyzed"
-msgstr ""
+msgstr "paralyzed"
 
 #: ../src/core/damage.cpp:186
 msgid "frozen"
-msgstr ""
+msgstr "frozen"
 
 #: ../src/core/damage.cpp:188
 msgid "burning"
-msgstr ""
+msgstr "burning"
 
 #: ../src/core/damage.cpp:250 ../src/core/damage.cpp:254
 msgid "damage"
-msgstr ""
+msgstr "damage"
 
 #: ../src/core/damage.cpp:269
 msgid "can not be blocked"
-msgstr ""
+msgstr "can not be blocked"
 
 #: ../src/core/damage.cpp:273 ../src/gui/charinfo.cpp:886
 msgid "Attack"
-msgstr ""
+msgstr "Attack"
 
 #: ../src/core/damage.cpp:286
 msgid "ignores armor"
-msgstr ""
+msgstr "ignores armor"
 
 #: ../src/core/damage.cpp:290 ../src/gui/charinfo.cpp:901
 msgid "Power"
-msgstr ""
+msgstr "Power"
 
 #: ../src/core/damage.cpp:299
 msgid "Chance for critical hit"
-msgstr ""
+msgstr "Chance for critical hit"
 
 #: ../src/core/dialogue.cpp:417
 msgid "which Topic"
-msgstr ""
+msgstr "which Topic"
 
 #: ../src/core/document.cpp:1184 ../src/core/item.cpp:654
 msgid "Required level"
-msgstr ""
+msgstr "Required level"
 
 #: ../src/core/document.cpp:1194
 msgid "Timer"
-msgstr ""
+msgstr "Timer"
 
 #: ../src/core/document.cpp:1195
 msgid "Cast delay"
-msgstr ""
+msgstr "Cast delay"
 
 #: ../src/core/item.cpp:647
 msgid "Value"
-msgstr ""
+msgstr "Value"
 
 #: ../src/core/item.cpp:650
 msgid "Selling Value"
-msgstr ""
+msgstr "Selling Value"
 
 #: ../src/core/item.cpp:660
 msgid "Required class"
-msgstr ""
+msgstr "Required class"
 
 #: ../src/core/item.cpp:718 ../src/core/item.cpp:726
 msgid "Heals "
-msgstr ""
+msgstr "Heals "
 
 #: ../src/core/item.cpp:718
 msgid " hitpoints"
-msgstr ""
+msgstr " hitpoints"
 
 #: ../src/core/item.cpp:729
 msgid "immune for "
-msgstr ""
+msgstr "immune for "
 
 #: ../src/core/item.cpp:741
 msgid "Two-handed weapon"
-msgstr ""
+msgstr "Two-handed weapon"
 
 #: ../src/core/item.cpp:746 ../src/gui/charinfo.cpp:896
 msgid "Range"
-msgstr ""
+msgstr "Range"
 
 #: ../src/core/item.cpp:757
 msgid "Damage"
-msgstr ""
+msgstr "Damage"
 
 #: ../src/core/item.cpp:769 ../src/gui/charinfo.cpp:906
 msgid "Armor"
-msgstr ""
+msgstr "Armor"
 
 #: ../src/core/item.cpp:774 ../src/gui/charinfo.cpp:911
 msgid "Block"
-msgstr ""
+msgstr "Block"
 
 #: ../src/core/item.cpp:779
 msgid "max hitpoints"
-msgstr ""
+msgstr "maximum hitpoints"
 
 #: ../src/core/item.cpp:784 ../src/gui/charinfo.cpp:856
 msgid "Strength"
-msgstr ""
+msgstr "Strength"
 
 #: ../src/core/item.cpp:789 ../src/gui/charinfo.cpp:860
 msgid "Dexterity"
-msgstr ""
+msgstr "Dexterity"
 
 #: ../src/core/item.cpp:794
 msgid "Magic Power"
-msgstr ""
+msgstr "Magic Power"
 
 #: ../src/core/item.cpp:799 ../src/gui/charinfo.cpp:864
 msgid "Willpower"
-msgstr ""
+msgstr "Willpower"
 
 #: ../src/core/item.cpp:814
 msgid " max. "
-msgstr ""
+msgstr " max. "
 
 #: ../src/gui/charcreate.cpp:120 ../src/gui/charinfo.cpp:849
 #: ../src/gui/partyinfo.cpp:450 ../src/gui/savegamelist.cpp:177
 msgid "Name"
-msgstr ""
+msgstr "Name"
 
 #: ../src/gui/charcreate.cpp:123 ../src/gui/charinfo.cpp:852
 #: ../src/gui/savegamelist.cpp:178
 msgid "Class"
-msgstr ""
+msgstr "Class"
 
 #: ../src/gui/charcreate.cpp:126
 msgid "Cancel"
-msgstr ""
+msgstr "Cancel"
 
 #: ../src/gui/charcreate.cpp:129
 msgid "Create"
-msgstr ""
+msgstr "Create"
 
 #: ../src/gui/charinfo.cpp:323
 msgid "Base damage"
-msgstr ""
+msgstr "Base damage"
 
 #: ../src/gui/charinfo.cpp:857
 msgid "Strength increases hitpoints, melee damage and attack power."
-msgstr ""
+msgstr "Strength increases hitpoints, melee damage and attack power."
 
 #: ../src/gui/charinfo.cpp:861
 msgid "Dexterity increases ranged damage, attack accuracy and attack speed"
-msgstr ""
+msgstr "Dexterity increases ranged damage, attack accuracy and attack speed"
 
 #: ../src/gui/charinfo.cpp:865
 msgid ""
 "Willpower decreases the duration and the impact of status changes and "
 "increases magical melee damage."
 msgstr ""
+"Willpower decreases the duration and the impact of status changes and "
+"increases magical melee damage."
 
 #: ../src/gui/charinfo.cpp:869
 msgid "Magic power"
-msgstr ""
+msgstr "Magic power"
 
 #: ../src/gui/charinfo.cpp:870
 msgid "Magic power increases the damage of magical attacks."
-msgstr ""
+msgstr "Magic power increases the damage of magical attacks."
 
 #: ../src/gui/charinfo.cpp:873
 msgid "Attr points"
-msgstr ""
+msgstr "Attribute points"
 
 #: ../src/gui/charinfo.cpp:874
 msgid "Attribute points remaining to distribute"
-msgstr ""
+msgstr "Attribute points remaining to distribute"
 
 #: ../src/gui/charinfo.cpp:877 ../src/gui/controlpanel.cpp:220
 msgid "Experience"
-msgstr ""
+msgstr "Experience"
 
 #: ../src/gui/charinfo.cpp:878
 msgid "Current experience and experience necessary for next level-up."
-msgstr ""
+msgstr "Current experience and experience necessary for next level-up."
 
 #: ../src/gui/charinfo.cpp:881 ../src/gui/controlpanel.cpp:204
 msgid "Hitpoints"
-msgstr ""
+msgstr "Hitpoints"
 
 #: ../src/gui/charinfo.cpp:882
 msgid "Current and maximal hitpoints."
-msgstr ""
+msgstr "Current and maximal hitpoints."
 
 #: ../src/gui/charinfo.cpp:887
 msgid ""
 "Attack value determines the chance to hit enemies that can block or evade."
 msgstr ""
+"Attack value determines the chance to hit enemies that can block or evade."
 
 #: ../src/gui/charinfo.cpp:891
 msgid "Attacks/s"
-msgstr ""
+msgstr "Attacks/s"
 
 #: ../src/gui/charinfo.cpp:892
 msgid "Number of attacks per second."
-msgstr ""
+msgstr "Number of attacks per second."
 
 #: ../src/gui/charinfo.cpp:897
 msgid "Weapon Range in meters."
-msgstr ""
+msgstr "Weapon Range in meters."
 
 #: ../src/gui/charinfo.cpp:902
 msgid "Attack power influences the damage dealt to armored enemies."
-msgstr ""
+msgstr "Attack power influences the damage dealt to armored enemies."
 
 #: ../src/gui/charinfo.cpp:907
 msgid "Armor reduces the damage of physical attacks."
-msgstr ""
+msgstr "Armor reduces the damage of physical attacks."
 
 #: ../src/gui/charinfo.cpp:912
 msgid ""
 "Block value determines the chance to avoid damage from physical attacks."
 msgstr ""
+"Block value determines the chance to avoid damage from physical attacks."
 
 #: ../src/gui/controlpanel.cpp:73
 msgid "Chat"
-msgstr ""
+msgstr "Chat"
 
 #: ../src/gui/controlpanel.cpp:339
 msgid "Options"
-msgstr ""
+msgstr "Options"
 
 #: ../src/gui/controlpanel.cpp:342
 msgid "Save & Exit"
-msgstr ""
+msgstr "Save & Exit"
 
 #: ../src/gui/controlpanel.cpp:345 ../src/gui/optionswindow.cpp:205
 msgid "Inventory"
-msgstr ""
+msgstr "Inventory"
 
 #: ../src/gui/controlpanel.cpp:348
 msgid "Character"
-msgstr ""
+msgstr "Character"
 
 #: ../src/gui/controlpanel.cpp:351 ../src/gui/optionswindow.cpp:211
 msgid "Skilltree"
-msgstr ""
+msgstr "Skilltree"
 
 #: ../src/gui/controlpanel.cpp:354
 msgid "Party"
-msgstr ""
+msgstr "Party"
 
 #: ../src/gui/controlpanel.cpp:357 ../src/gui/optionswindow.cpp:220
 msgid "Quests"
-msgstr ""
+msgstr "Quests"
 
 #: ../src/gui/inventory.cpp:388
 msgid "Gold"
-msgstr ""
+msgstr "Gold"
 
 #: ../src/gui/inventory.cpp:391
 msgid "Drop:"
-msgstr ""
+msgstr "Drop:"
 
 #: ../src/gui/mainmenu.cpp:76
 msgid "Single player"
-msgstr ""
+msgstr "Single player"
 
 #: ../src/gui/mainmenu.cpp:79
 msgid "Join game"
-msgstr ""
+msgstr "Join game"
 
 #: ../src/gui/mainmenu.cpp:82
 msgid "Host game"
-msgstr ""
+msgstr "Host game"
 
 #: ../src/gui/mainmenu.cpp:85
 msgid "Credits"
-msgstr ""
+msgstr "Credits"
 
 #: ../src/gui/mainmenu.cpp:88
 msgid "Quit"
-msgstr ""
+msgstr "Quit"
 
 #: ../src/gui/messageboxes.cpp:53 ../src/gui/networkwindows.cpp:93
 #: ../src/gui/networkwindows.cpp:218 ../src/gui/optionswindow.cpp:241
 #: ../src/gui/savegamelist.cpp:168 ../src/gui/tradewindow.cpp:256
 msgid "Ok"
-msgstr ""
+msgstr "Ok"
 
 #: ../src/gui/messageboxes.cpp:56
 msgid "Abort"
-msgstr ""
+msgstr "Abort"
 
 #: ../src/gui/messageboxes.cpp:59
 msgid "Save and Exit?"
-msgstr ""
+msgstr "Save and Exit?"
 
 #: ../src/gui/networkwindows.cpp:96
 msgid "Max. number of players"
-msgstr ""
+msgstr "Max. number of players"
 
 #: ../src/gui/networkwindows.cpp:99 ../src/gui/networkwindows.cpp:224
 msgid "Port"
-msgstr ""
+msgstr "Port"
 
 #: ../src/gui/networkwindows.cpp:221
 msgid "Host"
-msgstr ""
+msgstr "Host"
 
 #: ../src/gui/optionswindow.cpp:196
 msgid "Shortkeys"
-msgstr ""
+msgstr "Shortkeys"
 
 #: ../src/gui/optionswindow.cpp:198
 msgid "Audio"
-msgstr ""
+msgstr "Audio"
 
 #: ../src/gui/optionswindow.cpp:200
 msgid "Graphic"
-msgstr ""
+msgstr "Graphic"
 
 #: ../src/gui/optionswindow.cpp:202
 msgid "Misc"
-msgstr ""
+msgstr "Misc"
 
 #: ../src/gui/optionswindow.cpp:208
 msgid "Character screen"
-msgstr ""
+msgstr "Character screen"
 
 #: ../src/gui/optionswindow.cpp:214
 msgid "Party screen"
-msgstr ""
+msgstr "Party screen"
 
 #: ../src/gui/optionswindow.cpp:217
 msgid "Chatbox"
-msgstr ""
+msgstr "Chatbox"
 
 #: ../src/gui/optionswindow.cpp:223
 msgid "Minimap"
-msgstr ""
+msgstr "Minimap"
 
 #: ../src/gui/optionswindow.cpp:226
 msgid "Swap equipement"
-msgstr ""
+msgstr "Swap equipement"
 
 #: ../src/gui/optionswindow.cpp:229
 msgid "Item Labels"
-msgstr ""
+msgstr "Item Labels"
 
 #: ../src/gui/optionswindow.cpp:232
 msgid "Sound"
-msgstr ""
+msgstr "Sound"
 
 #: ../src/gui/optionswindow.cpp:235
 msgid "Music"
-msgstr ""
+msgstr "Music"
 
 #: ../src/gui/optionswindow.cpp:238
 msgid "Language"
-msgstr ""
+msgstr "Language"
 
 #: ../src/gui/questinfo.cpp:158
 msgid "open"
-msgstr ""
+msgstr "open"
 
 #: ../src/gui/questinfo.cpp:161
 msgid "finished"
-msgstr ""
+msgstr "finished"
 
 #: ../src/gui/questinfo.cpp:164
 msgid "failed"
-msgstr ""
+msgstr "failed"
 
 #: ../src/gui/savegamelist.cpp:165
 msgid "Savegame"
-msgstr ""
+msgstr "Savegame"
 
 #: ../src/gui/savegamelist.cpp:171
 msgid "Create Character"
-msgstr ""
+msgstr "Create Character"
 
 #: ../src/gui/savegamelist.cpp:174
 msgid "Delete Character"
-msgstr ""
+msgstr "Delete Character"
 
 #: ../src/gui/savegamelist.cpp:179
 msgid "Level"
-msgstr ""
+msgstr "Level"
 
 #: ../src/gui/worldmap.cpp:140
 msgid "Town Portal"
-msgstr ""
+msgstr "Town Portal"
