--- a/translation/en/sumwars-xml.po
+++ b/translation/en/sumwars-xml.po
@@ -2,7 +2,7 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR
-#
+# 
 # kalimgard <kalimgard@users.sourceforge.net>, 2010.
 #, fuzzy
 msgid ""
@@ -14,7 +14,7 @@ msgstr ""
 "Last-Translator: kalimgard <kalimgard@users.sourceforge.net>\n"
 "Language-Team: german <translation-team-de@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: shortbow.xml
