--- a/translation/en/sumwars-sumwars.po
+++ b/translation/en/sumwars-sumwars.po
@@ -2,7 +2,7 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
+#
 # kalimgard <kalimgard@users.sourceforge.net>, 2010.
 #, fuzzy
 msgid ""
@@ -12,7 +12,7 @@ msgstr ""
 "POT-Creation-Date: 2010-05-10 17:03+0200\n"
 "PO-Revision-Date: 2010-05-10 \n"
 "Last-Translator: kalimgard <kalimgard@users.sourceforge.net>\n"
-"Language-Team: english <en@sumwars>\n"
+"Language-Team: german <translation-team-de@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -237,7 +237,7 @@ msgstr "Magic power increases the damage of magical attacks."
 
 #: ../src/gui/charinfo.cpp:873
 msgid "Attr points"
-msgstr "Attribute points"
+msgstr "Attri points"
 
 #: ../src/gui/charinfo.cpp:874
 msgid "Attribute points remaining to distribute"
